methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:19: error: not found: type color
def isFacingTrail(c:color):Boolean = {
                    ^